# blundr

./: .dockerignore  .env.example  .gitignore  .uvignore  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  UV_MIGRATION.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.py  run_dev.sh
.github/workflows/: deploy.yml
app/: __init__.py  config.py  db.py  main.py
app/models/: __init__.py  db_models.py  game.py  schemas.py
app/routes/: __init__.py  analysis.py  auth.py  deps.py  games.py  reviews.py  settings.py  stats.py
app/services/: __init__.py  analysis_service.py  auth_service.py  email_service.py  game_service.py  lichess_client.py  srs_service.py
app/utils/: __init__.py  date_utils.py  exceptions.py
design/: buttons.html  chart-card.html  forms.html  nav.html  review-card.html  stat-tiles.html  sync-bar.html  tokens-colors.html  tokens-type.html
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AuthForm.tsx  ComboChart.tsx  Dashboard.tsx  LandingPage.tsx  ReviewPanel.tsx  SettingsView.tsx  icons.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
scripts/: README.md  bench_analysis.py  compare_detection.py  reset_db.sh  setup_dev.sh  stop_dev.sh
tests/: __init__.py  conftest.py  test_blundr_features.py  test_games.py
